--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="betSeteK">
         <div style="width: 100%; height: 550px; padding: 25px; border-radius: 51px;">
-          <iframe id="game-iframe" src="https://jogosarbety.app.br/" width="100%" height="100%" style="border-radius: 15px; border: none;">...</iframe> 
+          <iframe id="game-iframe" src="https://jogosarbety.app.br/demo/fortune-tiger" width="100%" height="100%" style="border-radius: 15px; border: none;">...</iframe> 
 
         
 
