--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </style>
 
 
-    <p>Ao fazer o depósito, mande um print para nossa equipe de suporte para receber o seu bônus!</p>
+    <p>Mande print do depósito no whatsapp do suporte para concorrer ao Pix de 2 mil Reais + Horários Pagantes.</p>
     
     <p>ㅤ</p>
     <p>ㅤ</p>
